--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name"           : "@shaitan-masters/centrifugo",
-	"version"        : "0.1.0",
-	"description"    : "Centrifuge admin driver",
-	"authors"        : [
-		{
-			"name" : "Alexander Gropynov | CREW Shaitan Masters",
-			"email": "alexander.gropyanov@mojam.co"
-		}
-	],
+	"description"    : "Centrifuge v3 back-end API wrapper",
+	"version"        : "0.2.0",
+	"author"         : {
+		"name" : "Alexander Gropynov | CREW Shaitan Masters",
+		"email": "alexander.gropyanov@mojam.co"
+	},
+	"license"        : "MIT",
 	"repository"     : {
 		"type": "git",
 		"url" : "git+https://github.com/shaitan-masters/node-centrifugo.git"
@@ -31,14 +30,13 @@
 		"build"         : "npm run clean && npm run compile",
 		"prepublishOnly": "npm run build"
 	},
-	"license"        : "MIT",
 	"main"           : "./dist/index.js",
 	"types"          : "./dist/index.d.ts",
 	"dependencies"   : {
-		"axios": "~0.26.1"
+		"axios": "~0.27.1"
 	},
 	"devDependencies": {
-		"@types/node": "~16.11.26",
+		"@types/node": "~16.11.31",
 		"typescript" : "~4.6.3",
 		"rimraf"     : "~3.0.2"
 	}
